render card list and fix overflow image

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -77,8 +77,8 @@ table {
 
 .main {
   display: flex;
-  padding: 20px 0 0;
-  background-color: #f1f1de; }
+  padding: 20px 0 60px;
+  background-color: #f6eeec; }
 
 .sectionFavorite {
   padding: 0px 20px;
@@ -116,17 +116,23 @@ table {
   padding: 20px 20px 10px;
   display: flex;
   flex-direction: column;
-  gap: 5px; }
-
-.nameContainer {
-  display: flex;
-  gap: 5px; }
+  gap: 5px;
+  width: 150px; }
+  .card__imgContainer {
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    overflow: hidden; }
+    .card__imgContainer .characterImg {
+      height: 150px; }
+  .card__nameContainer {
+    display: flex;
+    gap: 5px; }
+    .card__nameContainer .hidden {
+      display: none; }
 
 .hidden {
   display: none; }
-
-.characterImg {
-  height: 150px; }
 
 .footer {
   height: 20px;
